cmd/pkg/ingestor/suite/testdata/multiple-suites-for-one-template/constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sPodsRequireSecurityContext
metadata:
  name: pods-require-security-context
