cmd/pkg/ingestor/suite/testdata/multiple-suites-for-one-template/example_allowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: allowed-example
spec:
  containers:
    - name: nginx
      image: nginx
      securityContext:
        runAsUser: 2000
