cmd/pkg/ingestor/suite/testdata/multiple-suites-for-one-template/example_disallowed.yaml
apiVersion: v1
kind: Pod
metadata:
  name: disallowed-example
spec:
  containers:
    - name: nginx
      image: nginx
