cmd/pkg/ingestor/suite/testdata/multiple-suites-for-one-template/suite2.yaml
kind: Suite
apiVersion: test.gatekeeper.sh/v1alpha1
metadata:
  name: suite2
tests:
  - name: k8spodsrequiresecuritycontext1
    template: k8spodsrequiresecuritycontext_template.yaml
    constraint: constraint.yaml
    cases:
      - name: example-allowed
        object: example_allowed.yaml
        assertions:
          - violations: no
